correction gap accomodation collapse

--- a/src/sass/accomodation.scss
+++ b/src/sass/accomodation.scss
@@ -191,6 +191,6 @@
   }
   .desc-and-equipments {
     flex-direction: column;
-    gap:20px;
+    gap: 0px;
   }
 }
